# bzr

./: Cargo.toml  Makefile  README.md  foo.bzr  let.bzr
examples/: array.bzr  bang.bzr  bool.bzr  booleans.bzr  call_expr.bzr  closure.bzr  factorial.bzr  function.bzr  ident.bzr  if.bzr  if_else.bzr  if_else_if.bzr  infix.bzr  is_even.bzr  let.bzr  let_with_error.bzr  minus.bzr  precedence.bzr  precence.bzr  prefix_token.bzr  print.bzr  return.bzr  rule110.bzr  string.bzr  var.bzr  var_with_error.bzr  while.bzr
src/: lib.rs  main.rs
src/ast/: expression.rs  identifier.rs  mod.rs  node.rs  program.rs  statement.rs  types.rs
src/ast/expr/: arr_expr.rs  bool_expr.rs  call_expr.rs  function_expr.rs  if_expr.rs  index_expr.rs  infix_expr.rs  int_expr.rs  mod.rs  prefix_expr.rs  str_expr.rs  while_expr.rs
src/ast/exs/: boolex.rs  intex.rs  mod.rs  strex.rs
src/ast/statements/: letsts.rs  mod.rs  varsts.rs
src/ast/stmt/: block_stmt.rs  expression_stmt.rs  let_stmt.rs  mod.rs  return_stmt.rs  var_stmt.rs
src/ast/sts/: letsts.rs  varsts.rs
src/evaluator/: built_in_fns.rs  mod.rs
src/lexer/: mod.rs  token.rs
src/object/: array.rs  boolean.rs  built_in.rs  environment.rs  error.rs  function.rs  integer.rs  mod.rs  null.rs  ret.rs  string.rs
src/parser/: errors.rs  mod.rs  precedence.rs
tests/: evaluator.rs  lexer.rs  parser.rs
