[package]
name = "bzr"
version = "0.1.0"
edition = "2021"
description = "Bzr lang interpreter"
authors = ["Paulo Gabriel Justino Bezerra <pgjbzr@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"